# grail

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  COMMIT_MESSAGE.md  COMPLETE_INVESTIGATION_REPORT.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  DELTA_PROTOCOL_DESIGN.md  DELTA_PROTOCOL_TRADEOFFS.md  DISCORD_ANNOUNCEMENT.md  Dockerfile  ENV_UPDATE_SUMMARY.txt  FIX_SUMMARY.md  INVESTIGATION_REPORT.md  PR_MESSAGE.md  README.md  README_DELTA_RESEARCH.md  RELEASE_NOTE.md  RELEASE_NOTES.md  RESEARCH_ACTION_PLAN.md  RESEARCH_DIRECTIONS.md  SINGLE_KERNEL_BENCHMARK_README.md  SPARSITY_COMPUTATION_PSEUDOCODE.md  SPEC.md  bittensor-wallets-backup-yo.tgz  chain.py  compute.min.yaml  docker-compose.integration.yml  docker-compose.local-subnet.yml  eval_math_harness.py  eval_pass_at_k.py  monitor_storage.sh  pyproject.toml  retrieve_uid0_credentials.py  run_all.sh  schema.py  (+1 more)
.claude/: settings.local.json
benchmark_results/: results_20251231_011313.jsonl
data/: compression_benchmark_combined.csv  compression_benchmark_full.csv  compression_benchmark_iter16_iter32.csv  compression_benchmark_production.csv  compression_benchmark_quicktest.csv  compression_benchmark_qwen7b.csv  compression_benchmark_v2.csv  compression_benchmark_v3.csv  compression_benchmark_v4_test.csv  delta_encoding_all_algos.csv  delta_encoding_test.csv  sparsity_k_step.csv  sparsity_k_step_combined.csv  sparsity_k_step_new_downloads.csv  sparsity_k_step_new_experiments.csv  sparsity_k_step_remaining.csv  sparsity_sft.csv
docker/: .env.validator.example  DISK_SPACE_MANAGEMENT.md  Dockerfile  Dockerfile.miner  README.md  cleanup.sh  compose.grafana.yaml  compose.observability.yaml  docker-compose.integration.yml  docker-compose.local-subnet.yml  docker-compose.validator.yml  promtail-config.yaml  promtail.yml
docs/: FAQ.md  GRAIL_PROOF_SECURITY_REVIEW.md  Makefile  VALIDATOR_DEPLOYMENT.md  bounties.md  codebase-orientation-vi.md  compile_report.sh  delta_weight_protocol.md  docker_compose_integration_setup.md  grafana-setup.md  grail_technical_report.aux  grail_technical_report.bbl  grail_technical_report.blg  grail_technical_report.out  grail_technical_report.tex  incentive-mechanism.md  local-subnet-testing.md  miner-debugging.md  miner.md  observability.md  r2_credentials_design.md  references.bib  token_sampling_shape_check.md  validator.md  validator_determinism_uid_pressure.md  vllm-setup.md
examples/: python_code_example.py
experiments/: README.md  __init__.py  experiment_1_hyperplane_collision.py  experiment_2_multi_position_constraints.py  experiment_3_model_perturbation.py  experiment_4_attack_simulation.py  experiment_5_exhaustive_search.py  experiment_5_single_constraint_analysis.py  experiment_5_single_constraint_analysis_simple.py  real_challenge_k.py  real_input_validation_dos.py  real_k_equals_one.py  real_model_layer_ambiguity.py  real_tolerance_slack.py  requirements.txt  run.py  run_all.py  run_all.sh  test_setup.py
grail/: __init__.py  __main__.py  comms.py  drand.py  grail.py  logging_utils.py  rollout.py
research/data/: combine_datasets.py  download_and_analyze.py  pyproject.toml
research/infrastructure/: .basilica_state_gemma_1b_4b.json  .basilica_state_gemma_1b_4b.json.bak  .basilica_state_gemma_4b_only.json  .basilica_state_iter32_1_5b.json  .basilica_state_iter_ablation_1_5b.json  .basilica_state_iter_ablation_1_5b.json.bak  .basilica_state_lr5e7_seed2024_retry.json  .basilica_state_lr_1e6_1_5b.json  .basilica_state_lr_sweep_1_5b.json  .basilica_state_lr_sweep_1_5b.json.bak  .basilica_state_mbpp_qwen_1_5b_iter1.json  .basilica_state_qwen_1_5b_iter_sweep.json  .basilica_state_qwen_1_5b_iter_sweep.json.bak  .basilica_state_qwen_7b_iter1.json  .basilica_state_sft_qwen_1_5b_4gpu.json  .basilica_state_sft_qwen_1_5b_4gpu_lr3e6.json  .gitignore  PARALLEL_TRAINING_README.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  VALIDATION.md  __init__.py  basilica_manager.py  basilica_state.json  create_qwen_pods.py  debug_executors.py  deploy.py  deploy_parallel.py  deploy_parallel_basilica.py  deploy_qwen_only.py  example_simple.py  experiment_configs.py  experiment_runner.py  lium_manager.py  nohup_experiment_runner.py  pyproject.toml  r2_uploader.py  requirements.txt  run_active_models.sh  (+2 more)
research/offline_trainer/: .gitignore  pyproject.toml  run_offline_grpo.py  run_training_simple.py
research/offline_trainer/conf/: gsm8k_100iter.yaml  offline_grpo.yaml  quick_test.yaml
research/offline_trainer/src/grail_offline/data/: offline_rollouts.py
research/offline_trainer/src/grail_offline/pipelines/: __init__.py  offline_grpo.py
research/offline_trainer/src/grail_offline/utils/: __init__.py  server.py
research/offline_trainer/tests/: run_tests.py  smoke_test.py  test_gpu_integration.py  test_offline_trainer.py  test_wandb_import.py
research/trl/: DELTA_CHECKPOINT_README.md  IMPLEMENTATION_SUMMARY.md  NOHUP_USAGE.md  PARALLEL_TRAINING_README.md  QUICK_START.md  README.md  START_TRAINING.md  analysis_integration_example.py  callbacks.py  check_status.sh  delta_checkpoint_callback.py  nohup_mbpp.out  nohup_mbpp_lr1e6.out  pyproject.toml  run_algo.sh  run_parallel_sft.py  run_parallel_sft_nohup.sh  run_parallel_training.py  run_parallel_training_nohup.sh  stop_parallel_training.sh  test_single_instance.sh  train_trl_grpo.py  train_trl_grpo.py.bak  train_trl_grpo_README.md  train_trl_gsm8k.py  train_trl_gsm8k_README.md  train_trl_sft.py
results/: create_amc_bar_plot.py  create_bar_plot.py  create_bucketing_comparison.py  create_combined_plots.py  create_comparison_plot.py  create_grail_vs_trl.py  create_gsm8k_bar_plot.py  (+1 more)
scripts/offline_trainer/: README.md  USAGE_GUIDE.md  launch_training.sh  monitor_training.sh  offline_rollouts.py  pyproject.toml  run_offline_grpo.py  run_tests.py  run_training_simple.py  smoke_test.py  test_gpu_integration.py  test_offline_trainer.py  test_wandb_import.py
scripts/offline_trainer/conf/: offline_grpo.yaml
tools/vllm-server/: README.md  pyproject.toml
tools/vllm-server/.claude/: settings.local.json
(+455 files in other folders)
