[project]
name = "triton-dataset-analysis"
version = "0.1.0"
description = "Token distribution analysis for Triton/PyTorch datasets"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "tiktoken>=0.5.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.19.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
