[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grail-offline"
version = "0.1.0"
description = "Offline GRPO trainer and evaluator runner for GRAIL (no bittensor)."
requires-python = ">=3.10,<3.12"
dependencies = [
  "torch>=2.4.1",
  "transformers==4.57.1",
  "tokenizers==0.22.1",
  "accelerate>=0.20.0",
  "hydra-core>=1.3.2",
  "openai>=1.40.0",
  "numpy>=1.20.0",
  "rich>=14.1.0",
  "safetensors>=0.3.0",
  "datasets>=2.14.0",
  "scipy>=1.7.0",
  "requests>=2.28.0",
  "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "vllm>=0.11.0",
  "sglang>=0.5.4",
]

[tool.hatch.build.targets.wheel]
only-packages = true
packages = []


